<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_mypage">

    <fragment
        android:id="@+id/botHome"
        android:name="com.example.hackathon.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/botNav"
        android:name="com.example.hackathon.ui.addstudy.AddStudyFragment"
        android:label="@string/title_addstudy"
        tools:layout="@layout/fragment_add_study" />

    <fragment
        android:id="@+id/botSearch"
        android:name="com.example.hackathon.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <!-- 사이드 메뉴 Fragment들 -->
    <fragment
        android:id="@+id/nav_mypage"
        android:name="com.example.hackathon.ui.mypage.MyPageFragment"
        android:label="@string/menu_mypage"
        tools:layout="@layout/fragment_mypage">
        <action
            android:id="@+id/action_nav_mypage_to_nav_profile_edit"
            app:destination="@id/nav_profile_edit" />
        <action
            android:id="@+id/action_nav_mypage_to_nav_withdraw"
            app:destination="@id/nav_withdraw" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile_edit"
        android:name="com.example.hackathon.ui.profileedit.ProfileEditFragment"
        android:label="@string/menu_profileedit"
        tools:layout="@layout/fragment_profileedit" />

    <fragment
        android:id="@+id/nav_withdraw"
        android:name="com.example.hackathon.ui.withdraw.WithdrawFragment"
        android:label="@string/menu_withdraw"
        tools:layout="@layout/fragment_withdraw" />
</navigation>